crates/willikins-core/tests/snapshots/schema_generation__action_schema_generates.snap
---
source: crates/willikins-core/tests/schema_generation.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Action",
  "description": "What `plan` decided to do for one node instance.",
  "oneOf": [
    {
      "description": "A pure tool computed its outputs; there is no external state to\ncreate or leave alone, whatever [`Observation`] its `read` reported.",
      "type": "string",
      "const": "compute"
    },
    {
      "description": "The resource does not exist yet: `ensure` would create it.",
      "type": "string",
      "const": "create"
    },
    {
      "description": "[`Tool::replaces`] reports that `ensure` would delete an existing\nresource at this key before creating a fresh one -- milestone 3e's\n\"replace-when-INVALID\" (2026-09-29 addendum). An additive sibling\nof `Create`, exactly as `Blocked` and `Skip` were: a document whose\ntools never replace anything never produces this value, so its\nplan is unaffected. See [`Plan::replacing`].",
      "type": "string",
      "const": "replace"
    },
    {
      "description": "[`Tool::replaces`] reported `false` and [`Tool::updates`] reports\n`true`: `read` found [`Observation::Absent`] at this key, but\n`ensure` would reconcile the existing resource toward `inputs`\nwithout deleting it first -- milestone 3h's engine change. An\nadditive sibling of `Create` and `Replace`: a document whose tools\nnever update anything (`Tool::updates`'s default `Ok(false)`)\nnever produces this value, so its plan is unaffected. No report\nmirrors [`Plan::replacing`] for this variant: the node's own line\nand inputs already say what changes, and nothing is deleted.",
      "type": "string",
      "const": "update"
    },
    {
      "description": "The resource already exists and is ours: `ensure` would be a no-op.",
      "type": "string",
      "const": "noop"
    },
    {
      "description": "A [`crate::tool::Gate`]'s `read` reported [`Observation::Absent`]:\nthe thing the operator must make does not exist yet. See\n[`Plan::blocked`].",
      "type": "string",
      "const": "blocked"
    },
    {
      "description": "This node instance binds a node or `for_each` source that is\n[`Action::Blocked`] or itself `Skip`, directly or transitively: it is\nnever read, and every one of its output ports is\n[`crate::value::ValueState::Unknown`]. See [`Plan::blocked`].",
      "type": "string",
      "const": "skip"
    }
  ]
}
